--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -14,20 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to /home/bayrakd1/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/bayrakd1/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to /home/bayrakd1/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'nltk'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-02d6321fd9e4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Importing libraries\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'punkt'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'stopwords'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'wordnet'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
      ]
     }
    ],
@@ -95,21 +93,21 @@
     "        doc = \"\"\n",
     "        cont = False\n",
     "    \n",
-    "    for line in f: #skip text between .I and .W\n",
-    "        if \".I\" in line:\n",
-    "            cont = False\n",
-    "            if len(doc)>0:\n",
-    "                docs.append(doc)\n",
-    "                doc = \"\"\n",
-    "        if \".W\" in line:\n",
-    "            cont = True\n",
-    "        if cont == True:\n",
-    "            doc = doc + line\n",
-    "        \n",
-    "    if len(doc)>0: #needed for the last document\n",
-    "        docs.append(doc)\n",
+    "        for line in f: #skip text between .I and .W\n",
+    "            if \".I\" in line:\n",
+    "                cont = False\n",
+    "                if len(doc)>0:\n",
+    "                    docs.append(doc)\n",
+    "                    doc = \"\"\n",
+    "            if \".W\" in line:\n",
+    "                cont = True\n",
+    "            if cont == True:\n",
+    "                doc = doc + line\n",
+    "            \n",
+    "        if len(doc)>0: #needed for the last document\n",
+    "            docs.append(doc)\n",
     "\n",
-    "    f.close()\n",
+    "        f.close()\n",
     "    \n",
     "    return docs"
    ]
@@ -147,7 +145,7 @@
     }
    ],
    "source": [
-    "docs = parseAbsDocs(\"cran/cran.all.1400\")\n",
+    "docs = parseDocs(\"cran/cran.all.1400\")\n",
     "print(docs[5])\n",
     "print(len(docs))"
    ]
@@ -369,7 +367,7 @@
     }
    ],
    "source": [
-    "docs = parseAbsDocs(\"cran/cran.all.1400\")\n",
+    "docs = parseDocs(\"cran/cran.all.1400\")\n",
     "model1 = tokenize_and_clean(docs)\n",
     "model2 = lemmatize(model1)\n",
     "model3 = synonym_enrichment(model2)"
@@ -378,9 +376,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python390jvsc74a57bd04f90bca6d5532465107dddf48f58200c9df515003323938e85648d01de9b439e",
+   "display_name": "Python 3.9.0 32-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -392,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.0"
   },
   "varInspector": {
    "cols": {
@@ -422,6 +419,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "4f90bca6d5532465107dddf48f58200c9df515003323938e85648d01de9b439e"
+   }
   }
  },
  "nbformat": 4,
