--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -14,18 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'nltk'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-02d6321fd9e4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Importing libraries\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'punkt'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'stopwords'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mnltk\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'wordnet'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n[nltk_data]     C:\\Users\\user\\AppData\\Roaming\\nltk_data...\n[nltk_data]   Package punkt is already up-to-date!\n[nltk_data] Downloading package stopwords to\n[nltk_data]     C:\\Users\\user\\AppData\\Roaming\\nltk_data...\n[nltk_data]   Package stopwords is already up-to-date!\n[nltk_data] Downloading package wordnet to\n[nltk_data]     C:\\Users\\user\\AppData\\Roaming\\nltk_data...\n[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     }
    ],
@@ -50,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Documents in \"cran.all.1400\" look like this: \n",
+    "#### Documents in \"cran.all.1400\" look like this: \n",
     "\n",
     "**.I 1** (index) \\\n",
     "**.T** (Title) \\\n",
@@ -78,12 +74,21 @@
     "  an empirical evaluation of the destalling effects was made for\n",
     "the specific configuration of the experiment .\\\n",
     "**.I 2**\\\n",
+    "...\n",
+    "\n",
+    "#### Queries in \"car.qry\" look like this:\n",
+    "\n",
+    "**.I** 001 \\\n",
+    "**.W**\\\n",
+    "what similarity laws must be obeyed when constructing aeroelastic models\n",
+    "of heated high speed aircraft .\\\n",
+    "**.I** 002\\\n",
     "..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,9 +104,9 @@
     "                if len(doc)>0:\n",
     "                    docs.append(doc)\n",
     "                    doc = \"\"\n",
-    "            if \".W\" in line:\n",
+    "            elif \".W\" in line:\n",
     "                cont = True\n",
-    "            if cont == True:\n",
+    "            elif cont == True:\n",
     "                doc = doc + line\n",
     "            \n",
     "        if len(doc)>0: #needed for the last document\n",
@@ -114,45 +119,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "\n",
-      "one-dimensional transient heat flow in a multilayer\n",
-      "slab .\n",
-      "  in a recent contribution to the readers'\n",
-      "forum wassermann gave analytic\n",
-      "solutions for the temperature in a double\n",
-      "layer slab, with a triangular heat\n",
-      "rate input at one face, insulated at the other,\n",
-      "and with no thermal resistance\n",
-      "at the interface .  his solutions were for the\n",
-      "three particular cases..\n",
-      "i propose here to give the general solution\n",
-      "to this problem, to indicate\n",
-      "briefly how it is obtained using the method of\n",
-      "reference 2, and to point out\n",
-      "that the solutions given by wassermann are\n",
-      "incomplete for times longer\n",
-      "than the duration of the heat input .\n",
-      "\n",
-      "1400\n"
+      "one-dimensional transient heat flow in a multilayer\nslab .\n  in a recent contribution to the readers'\nforum wassermann gave analytic\nsolutions for the temperature in a double\nlayer slab, with a triangular heat\nrate input at one face, insulated at the other,\nand with no thermal resistance\nat the interface .  his solutions were for the\nthree particular cases..\ni propose here to give the general solution\nto this problem, to indicate\nbriefly how it is obtained using the method of\nreference 2, and to point out\nthat the solutions given by wassermann are\nincomplete for times longer\nthan the duration of the heat input .\n\nnumber of documents:  1398\nwhat theoretical and experimental guides do we have as to turbulent\ncouette flow behaviour .\n\nnumber of queries:  225\n"
      ]
     }
    ],
    "source": [
     "docs = parseDocs(\"cran/cran.all.1400\")\n",
     "print(docs[5])\n",
-    "print(len(docs))"
+    "print(\"number of documents: \",len(docs))\n",
+    "queries = parseDocs(\"cran/cran.qry\")\n",
+    "print(queries[5])\n",
+    "print(\"number of queries: \",len(queries))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "['one-dimensional', 'transient', 'heat', 'flow', 'multilayer', 'slab', 'recent', 'contribution', \"readers'\", 'forum', 'wassermann', 'gave', 'analytic', 'solutions', 'temperature', 'double', 'layer', 'slab', 'triangular', 'heat', 'rate', 'input', 'one', 'face', 'insulated', 'thermal', 'resistance', 'interface', 'solutions', 'three', 'particular', 'cases..', 'propose', 'give', 'general', 'solution', 'problem', 'indicate', 'briefly', 'obtained', 'using', 'method', 'reference', '2', 'point', 'solutions', 'given', 'wassermann', 'incomplete', 'times', 'longer', 'duration', 'heat', 'input']\n"
      ]
@@ -218,7 +207,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['theoretical', 'experimental', 'guides', 'turbulent', 'couette', 'flow', 'behaviour']\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_tokens = tokenize_and_clean(queries)\n",
+    "print(query_tokens[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,12 +251,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "['one-dimensional', 'transient', 'heat', 'flow', 'multilayer', 'slab', 'recent', 'contribution', \"readers'\", 'forum', 'wassermann', 'gave', 'analytic', 'solution', 'temperature', 'double', 'layer', 'slab', 'triangular', 'heat', 'rate', 'input', 'one', 'face', 'insulated', 'thermal', 'resistance', 'interface', 'solution', 'three', 'particular', 'cases..', 'propose', 'give', 'general', 'solution', 'problem', 'indicate', 'briefly', 'obtained', 'using', 'method', 'reference', '2', 'point', 'solution', 'given', 'wassermann', 'incomplete', 'time', 'longer', 'duration', 'heat', 'input']\n"
      ]
@@ -262,7 +269,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['theoretical', 'experimental', 'guide', 'turbulent', 'couette', 'flow', 'behaviour']\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_lemmas = lemmatize(query_tokens)\n",
+    "print(query_lemmas[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,10 +315,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[Synset('transient.n.01'),\n",
@@ -302,9 +328,8 @@
        " Synset('ephemeral.s.01')]"
       ]
      },
-     "execution_count": 89,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 15
     }
    ],
    "source": [
@@ -313,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
