--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -12,232 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install ipynb\n",
-    "#from ipynb.fs.full.preprocessing import parseDocs, tokenize_and_clean, lemmatize\n",
-    "#from preprocessing import *"
+    "from preprocessing import *\n",
+    "from cosine_sim import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from cosine_sim\n",
-    "import numpy as np\n",
-    "def cosine_sim(x, y):\n",
-    "    \"\"\"calculates cosine similarity between 2 vectors.\n",
-    "        \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    x : numpy.ndarray\n",
-    "        vector representation (of query)\n",
-    "    y : numpy.ndarray\n",
-    "        vector representation (of document)\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    cosine_sim: numpy.float64\n",
-    "        cosine similarity between vector x and y\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    cos_sim = np.dot(x, y)/(np.linalg.norm(x)*np.linalg.norm(y))\n",
-    "    \n",
-    "    return cos_sim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from cosine_sim\n",
-    "def get_k_relevant(k, query, D):\n",
-    "    \"\"\"returns ranked list of top k documents in descending order of their\n",
-    "    cosine similarity with the query\n",
-    "        \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    k : int\n",
-    "        number of documents to retrieve (top k)\n",
-    "    query : numpy.ndarray\n",
-    "        vector representation of query whose cosine similarity is to be computed with the corpus\n",
-    "    D: list of numpy.ndarray\n",
-    "        vector representation of all documents in corpus\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    ranked_sims: list of tuples (cosine similarity, index of document)\n",
-    "        list of top k cosine similarities and the corresponding documents (their index) in descending order\n",
-    "    \"\"\"\n",
-    "      \n",
-    "    cosine_sims = []\n",
-    "    \n",
-    "    for i, d in enumerate(D):\n",
-    "        cosine_sims.append((cosine_sim(query, d), i))\n",
-    "        \n",
-    "    ranked_sims = sorted(cosine_sims, key=lambda x: x[0], reverse=True)\n",
-    "    \n",
-    "    if k != 0:\n",
-    "        # if k=0 retrieve all documents in descending order\n",
-    "        ranked_sims = ranked_sims[:k]\n",
-    "    \n",
-    "    return ranked_sims"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to /home/bayrakd1/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n",
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     /home/bayrakd1/nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package wordnet to /home/bayrakd1/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
-     ]
-    }
-   ],
-   "source": [
-    "#from preprocessing file\n",
-    "\n",
-    "import nltk\n",
-    "nltk.download('punkt')\n",
-    "nltk.download('stopwords')\n",
-    "nltk.download('wordnet')\n",
-    "from nltk.tokenize import sent_tokenize, TreebankWordTokenizer\n",
-    "from nltk.corpus import stopwords\n",
-    "from nltk.corpus import wordnet\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "import re\n",
-    "from bs4 import BeautifulSoup #to remove HTML tags\n",
-    "\n",
-    "lemmatizer = WordNetLemmatizer()\n",
-    "stop_list = stopwords.words('english')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from preprocessing file\n",
-    "def parseDocs(filename): \n",
-    "    with open(filename,\"r\") as f:\n",
-    "        docs = []\n",
-    "        doc = \"\"\n",
-    "        cont = False\n",
-    "    \n",
-    "        for line in f: #skip text between .I and .W\n",
-    "            if \".I\" in line:\n",
-    "                cont = False\n",
-    "                if len(doc)>0:\n",
-    "                    docs.append(doc)\n",
-    "                    doc = \"\"\n",
-    "            elif \".W\" in line:\n",
-    "                cont = True\n",
-    "            elif cont == True:\n",
-    "                doc = doc + line\n",
-    "\n",
-    "        if len(doc)>0: #needed for the last document\n",
-    "            docs.append(doc)\n",
-    "\n",
-    "        f.close()\n",
-    "    \n",
-    "    return docs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from preprocessing file\n",
-    "def tokenize_and_clean(docs):\n",
-    "    \"\"\"This function tokenizes texts into lowercased tokens with TreebankWordTokenizer\n",
-    "    \n",
-    "    Preprocesses the list of strings given as input.\n",
-    "    Tokenize each string into sentences using sent_tokenize(),\n",
-    "    tokenize each sentence into tokens using TreebankWordTokenizer().tokenize(),\n",
-    "    Lowercasing the characters, removing non-ASCII values, special characters, HTML tags and stopwords.\n",
-    "    \n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    docs : list of strings\n",
-    "        list of document contents\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    tokens : list of list of strings\n",
-    "        each text as a list of lowercased tokens\n",
-    "    \"\"\"\n",
-    "    tokens = []\n",
-    "    \n",
-    "    for doc in docs:\n",
-    "        # converting to lower case\n",
-    "        txt = doc.lower()\n",
-    "        \n",
-    "        # remove HTML tags\n",
-    "        txt = BeautifulSoup(txt, 'html.parser').get_text()\n",
-    "        \n",
-    "        # tokenize\n",
-    "        sentence = sent_tokenize(txt)\n",
-    "        tok = [TreebankWordTokenizer().tokenize(sent) for sent in sentence]\n",
-    "        tok = [item for sublist in tok for item in sublist] #convert to one list\n",
-    "        \n",
-    "        # removing stop words and special characters from the tokens\n",
-    "        clean_tokens = [word for word in tok if (word not in stop_list and not re.match('[^A-Za-z0-9]', word))]\n",
-    "        \n",
-    "        tokens.append(clean_tokens)\n",
-    "\n",
-    "\n",
-    "    return tokens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from preprocessing file\n",
-    "def lemmatize(doc_tokens):\n",
-    "    \"\"\"This function lemmatizes texts with NLTK WordNetLemmatizer\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    doc_tokens : list of list of tokens\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    doc_lemmas : list of list of lemmatized tokens\n",
-    "    \"\"\"\n",
-    "    doc_lemmas = []\n",
-    "    \n",
-    "    for doc in doc_tokens:\n",
-    "        lemmas = [lemmatizer.lemmatize(token) for token in doc]\n",
-    "        doc_lemmas.append(lemmas)\n",
-    "        \n",
-    "    return doc_lemmas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,9 +214,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "MemoryError",
+     "evalue": "Unable to allocate 557. MiB for an array with shape (8543, 8543) and data type float64",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-68396aef63d7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Run the cell below to get dense 20d vector models\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtf_idf_matrix_dense\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtf_idf_matrix_transform\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlsi\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtf_idf_matrix\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-20-a170be6f48b2>\u001b[0m in \u001b[0;36mlsi\u001b[1;34m(matrix, d)\u001b[0m\n\u001b[0;32m     26\u001b[0m     \"\"\"\n\u001b[0;32m     27\u001b[0m     \u001b[1;31m# Singular-value decomposition is already done for you\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 28\u001b[1;33m     \u001b[0mT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDT\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msvd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmatrix\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     29\u001b[0m     \u001b[0mS\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiag\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ms\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36msvd\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39-32\\lib\\site-packages\\numpy\\linalg\\linalg.py\u001b[0m in \u001b[0;36msvd\u001b[1;34m(a, full_matrices, compute_uv, hermitian)\u001b[0m\n\u001b[0;32m   1658\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1659\u001b[0m         \u001b[0msignature\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'D->DdD'\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0misComplexType\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[1;34m'd->ddd'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1660\u001b[1;33m         \u001b[0mu\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvh\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgufunc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msignature\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msignature\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextobj\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mextobj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1661\u001b[0m         \u001b[0mu\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mu\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult_t\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1662\u001b[0m         \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ms\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_realType\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresult_t\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 557. MiB for an array with shape (8543, 8543) and data type float64"
+     ]
+    }
+   ],
    "source": [
     "# Run the cell below to get dense 20d vector models\n",
     "tf_idf_matrix_dense, tf_idf_matrix_transform = lsi(tf_idf_matrix,20)"
@@ -439,18 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(20, 1398)"
       ]
      },
-     "execution_count": 72,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 9
     }
    ],
    "source": [
@@ -466,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,34 +337,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(20, 225)"
+       "10"
       ]
      },
-     "execution_count": 74,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 12
     }
    ],
    "source": [
-    "tf_idf_queries_dense.shape"
+    "tf_idf_queries_dense.shape\n",
+    "np.count_nonzero(tf_idf_queries.T[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "get 10 top:  [(0.7809579117962733, 50), (0.7676650546661836, 11), (0.7643710468981361, 252), (0.7618345019991778, 1166), (0.7376461569764691, 882), (0.7293633705409656, 1165), (0.729238984321086, 808), (0.7182758380584934, 1325), (0.7170035653923107, 99), (0.7074827920113113, 1302)]\n"
+      "get 10 top:  [(nan, 0), (nan, 1), (nan, 2), (nan, 3), (nan, 4), (nan, 5), (nan, 6), (nan, 7), (nan, 8), (nan, 9)]\n",
+      "c:\\Users\\user\\Desktop\\snlp_project\\cosine_sim.py:20: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  cos_sim = np.dot(x, y)/(np.linalg.norm(x)*np.linalg.norm(y))\n"
      ]
     }
    ],
@@ -578,9 +381,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python390jvsc74a57bd04f90bca6d5532465107dddf48f58200c9df515003323938e85648d01de9b439e",
+   "display_name": "Python 3.9.0 32-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -592,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.0"
   },
   "varInspector": {
    "cols": {
@@ -622,6 +424,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "4f90bca6d5532465107dddf48f58200c9df515003323938e85648d01de9b439e"
+   }
   }
  },
  "nbformat": 4,
