--- a/cosine_sim.ipynb
+++ b/cosine_sim.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,10 @@
     "    cosine_sim: numpy.float64\n",
     "        cosine similarity between vector x and y\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
+    "    if np.count_nonzero(x) == 0 or np.count_nonzero(y) == 0:\n",
+    "        return float('-inf')\n",
+    "\n",
     "    cos_sim = np.dot(x, y)/(np.linalg.norm(x)*np.linalg.norm(y))\n",
     "    \n",
     "    return cos_sim"
