added vanilla position vector

--- a/embeddings.ipynb
+++ b/embeddings.ipynb
@@ -12,17 +12,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: gensim in /opt/conda/lib/python3.7/site-packages (4.0.1)\n",
-      "Requirement already satisfied, skipping upgrade: numpy>=1.11.3 in /opt/conda/lib/python3.7/site-packages (from gensim) (1.17.3)\n",
-      "Requirement already satisfied, skipping upgrade: smart-open>=1.8.1 in /opt/conda/lib/python3.7/site-packages (from gensim) (5.0.0)\n",
-      "Requirement already satisfied, skipping upgrade: scipy>=0.18.1 in /opt/conda/lib/python3.7/site-packages (from gensim) (1.3.3)\n"
+      "Collecting gensim\n",
+      "  Downloading gensim-4.0.1-cp38-cp38-manylinux1_x86_64.whl (23.9 MB)\n",
+      "\u001b[K     |████████████████████████████████| 23.9 MB 7.8 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: scipy>=0.18.1 in /opt/conda/lib/python3.8/site-packages (from gensim) (1.5.3)\n",
+      "Requirement already satisfied: numpy>=1.11.3 in /opt/conda/lib/python3.8/site-packages (from gensim) (1.19.5)\n",
+      "Collecting smart-open>=1.8.1\n",
+      "  Downloading smart_open-5.0.0-py3-none-any.whl (56 kB)\n",
+      "\u001b[K     |████████████████████████████████| 56 kB 2.3 MB/s  eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: smart-open, gensim\n",
+      "Successfully installed gensim-4.0.1 smart-open-5.0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.8/site-packages/gensim/similarities/__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
+      "  warnings.warn(msg)\n"
      ]
     }
    ],
@@ -36,19 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "if not skipTraining:\n",
     "    from preprocessing import *\n",
     "    from cosine_sim import *\n",
-    "    from synonym_enrich import *"
+    "    from synonym_enrich import *\n",
+    "    from baseline import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,26 +107,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.16547997, -0.23902543,  0.34613046, -0.15685175, -0.33932897,\n",
-       "       -0.14475358,  0.35155395,  0.5407517 , -0.12688686, -0.30697745,\n",
-       "        0.12583013, -0.28550646,  0.14946432, -0.07647571, -0.21525793,\n",
-       "        0.01549983,  0.016679  , -0.12470072, -0.2797611 ,  0.0069176 ,\n",
-       "        0.15511991, -0.3263179 ,  0.6232955 , -0.064994  , -0.01753527,\n",
-       "        0.05150538, -0.35302025, -0.2049817 , -0.63992643,  0.21758004,\n",
-       "       -0.33853486,  0.0651901 , -0.04681535, -0.05625008,  0.00447547,\n",
-       "       -0.3965827 ,  0.02142886,  0.03432292, -0.4676598 , -0.13731252,\n",
-       "        0.6782075 , -0.04655042,  0.03315324, -0.18289414,  0.72673374,\n",
-       "       -0.12769197,  0.27449325, -0.35474014, -0.2160631 ,  0.23292093],\n",
+       "array([ 0.01503546, -0.19407776,  0.28160238, -0.17297941, -0.4450978 ,\n",
+       "       -0.10153174,  0.49798927,  0.28953522, -0.26928496, -0.3553878 ,\n",
+       "        0.15962848, -0.11752975,  0.01413823, -0.05062268, -0.11307315,\n",
+       "        0.01968868,  0.10698026,  0.06178449, -0.2272061 ,  0.11730936,\n",
+       "        0.0034541 , -0.24787344,  0.6591028 ,  0.07714592,  0.20062515,\n",
+       "        0.17791298, -0.26672757, -0.12411867, -0.7317228 , -0.0645718 ,\n",
+       "       -0.32005432,  0.15800847,  0.03260247,  0.14398654,  0.08191456,\n",
+       "       -0.42531094,  0.03000608,  0.07745912, -0.44342226, -0.16953444,\n",
+       "        0.3397785 , -0.03678326,  0.26648775, -0.21699211,  0.71049553,\n",
+       "       -0.11359502,  0.39135873, -0.24128321, -0.2730923 ,  0.48383117],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,25 +138,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('digital', 0.979901909828186),\n",
-       " ('automatic', 0.9666916131973267),\n",
-       " ('evaluation', 0.9542814493179321),\n",
-       " ('computing', 0.9386852383613586),\n",
-       " ('complex', 0.9368526339530945),\n",
-       " ('practical', 0.9331501722335815),\n",
-       " ('table', 0.9330777525901794),\n",
-       " ('applying', 0.9317920207977295),\n",
-       " ('formulation', 0.931194007396698),\n",
-       " ('aid', 0.9302501082420349)]"
+       "[('digital', 0.9919171929359436),\n",
+       " ('automatic', 0.9600348472595215),\n",
+       " ('evaluation', 0.953161358833313),\n",
+       " ('computing', 0.9528289437294006),\n",
+       " ('complex', 0.9485465884208679),\n",
+       " ('aid', 0.9430157542228699),\n",
+       " ('formulation', 0.9394195675849915),\n",
+       " ('suitable', 0.9387032389640808),\n",
+       " ('practical', 0.9384737014770508),\n",
+       " ('applying', 0.9383900761604309)]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,35 +167,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf_docs, sorted_vocab = create_term_doc_matrix(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vanilla_pos_vec(w2v_model, tf_matrix, sorted_vocab, docs):\n",
+    "    pos_vecs = []\n",
+    "    for i, doc in enumerate(docs):\n",
+    "        n_words = len(doc)\n",
+    "        weighted_sum = np.zeros((vec_size,))\n",
+    "        for word in doc:\n",
+    "            if word in w2v_model.wv:\n",
+    "                word_idx = sorted_vocab.index(word)\n",
+    "                w = tf_matrix[word_idx][i]\n",
+    "                weighted_sum += w * w2v_model.wv[word]\n",
+    "\n",
+    "        avg = weighted_sum/n_words\n",
+    "        pos_vecs.append(avg)\n",
+    "        \n",
+    "    return pos_vecs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-50-9864add5d418>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m \u001b[0;31m#set weights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;31m#needed for weighted averaging\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpos_vecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mdoc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdocs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "1398"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "raise NotImplementedError #set weights\n",
-    "w = 1 #needed for weighted averaging\n",
-    "\n",
-    "pos_vecs = []\n",
-    "for doc in docs:\n",
-    "    n_words = len(doc)\n",
-    "    weighted_sum = np.zeros((vec_size,))\n",
-    "    for word in doc:\n",
-    "        if word in w2v_model.wv:\n",
-    "            weighted_sum += w * w2v_model.wv[word]\n",
-    "        \n",
-    "    avg = weighted_sum/n_words\n",
-    "    pos_vecs.append(avg)"
+    "pos_vecs = vanilla_pos_vec(w2v_model, tf_docs, sorted_vocab, docs)\n",
+    "len(pos_vecs)"
    ]
   },
   {
@@ -192,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,30 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.19874685, -0.12971978,  0.147887  ,  0.26760656,  0.09977112,\n",
-       "       -0.18255714,  0.14067312,  0.1964975 , -0.23258264, -0.07927153,\n",
-       "        0.35591024,  0.03969877,  0.05411862, -0.02184379, -0.32557228,\n",
-       "        0.02802402,  0.214599  , -0.66473687, -0.21687463, -0.13439621,\n",
-       "        0.10326765,  0.02690773,  0.03022747, -0.0941508 ,  0.15157737,\n",
-       "       -0.1088073 ,  0.02512744, -0.36371958, -0.2775667 , -0.12016089,\n",
-       "       -0.14123534,  0.11724566,  0.03826113,  0.13443409, -0.16424286,\n",
-       "        0.425728  ,  0.26057693, -0.16866845,  0.04461066, -0.02106278,\n",
-       "        0.31882682,  0.25649196, -0.0412026 ,  0.09873915, -0.04683453,\n",
-       "        0.06451657, -0.21350868, -0.1803241 ,  0.00790678,  0.31618693],\n",
-       "      dtype=float32)"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "v1 = d2v_model.infer_vector(docs[0])\n",
     "v1"
@@ -261,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.6"
   },
   "varInspector": {
    "cols": {
